objects/TLG_Json_Interface__mdt.object
<CustomObject>
    <label>TLG Json Interface</label>
    <pluralLabel>TLG Json Interfaces</pluralLabel>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dup_Activity_Type__c</fullName>
        <label>Dup Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Org_Code__c</fullName>
        <label>Referral Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_External_Id_Field__c</fullName>
        <label>SFDC External Id Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Lead_Id_Field__c</fullName>
        <label>Interface Lead Id Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Organization_Id__c</fullName>
        <label>Referral Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_External_Id_Field__c</fullName>
        <label>SFDC Account External Id Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Field_in_Dup_Activity__c</fullName>
        <label>Description Field in Dup Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>